# rgbd_slam_gx

./: .gitignore  CMakeLists.txt  README.md  parameters.txt  result_after.g2o  result_before.g2o
include/: slamBase.h
src/: CMakeLists.txt  generatePointCloud.cpp  main.cpp  slam.cpp  slamBase.cpp  slamEnd.cpp
