CMAKE_MINIMUM_REQUIRED_VERSION( VERSION 2.8 )
PROJECT (myslam)
SET( CMAKE_CXX_COMPILER "g++" )

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )

ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )